src/OpenGl/OpenGl_StructureShadow.hxx
@@ -28,8 +28,22 @@ public:
   Standard_EXPORT OpenGl_StructureShadow (const Handle(Graphic3d_StructureManager)& theManager,
                                           const Handle(OpenGl_Structure)&           theStructure);
 
+  //! Return groups of parent structure.
   virtual const Graphic3d_SequenceOfGroup& DrawGroups() const Standard_OVERRIDE
   { return myParent->DrawGroups(); }
+
+  //! Renders groups of parent structure.
+  virtual void renderGeometry (const Handle(OpenGl_Workspace)& theWorkspace,
+                               bool&                           theHasClosed) const Standard_OVERRIDE
+  {
+    myParent->renderGeometry (theWorkspace, theHasClosed);
+  }
+
+  //! Renders closed groups of parent structure.
+  virtual void renderClosedGeometry (const Handle(OpenGl_Workspace)& theWorkspace) const Standard_OVERRIDE
+  {
+    myParent->renderClosedGeometry (theWorkspace);
+  }
 
 private:
 
